--- a/inflation-forecast/ipca_inflation_forecast_basic.ipynb
+++ b/inflation-forecast/ipca_inflation_forecast_basic.ipynb
@@ -1637,7 +1637,7 @@
         "* A constatação de que, mesmo com features simples como os lags, é possível obter um modelo que aprende alguma relação nos dados, embora com limitações de precisão.\n",
         "* A necessidade de métricas objetivas e visualizações para avaliar o desempenho do modelo de forma crítica.\n",
         "\n",
-        "*Sugestões para trabalhos futuros e melhorias no modelo:*\n",
+        "*Futuras melhorias no modelo:*\n",
         "* **Engenharia de Features:** Incorporar variáveis macroeconômicas exógenas que sabidamente influenciam a inflação, como a taxa de juros (Selic), taxa de câmbio (USD/BRL), índices de atividade econômica, preços de commodities, etc.\n",
         "* **Modelos Mais Avançados:** Experimentar modelos estatísticos clássicos para séries temporais, como ARIMA e SARIMA, ou algoritmos de machine learning mais sofisticados, como Random Forest, Gradient Boosting (XGBoost, LightGBM) ou até mesmo redes neurais (LSTMs).\n",
         "* **Análise de Estacionariedade:** Verificar a estacionariedade da série do IPCA e aplicar transformações (como diferenciação) se necessário, pois muitos modelos performam melhor com séries estacionárias.\n",
